--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,9 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <item android:id="@+id/change_time"
+        android:title="Change time"
+        android:icon="@drawable/chamge_time"
+        app:showAsAction="always"/>
+
     <item android:id="@+id/add_category"
         android:title="Add category"
         android:icon="@drawable/add_icon"
         app:showAsAction="always"/>
+
+    <item android:id="@+id/refresh"
+        android:title="Refresh"
+        android:icon="@drawable/refresh"
+        app:showAsAction="always"/>
+
 
 </menu>
